Improve rotation parsing, add function to convert to a string, move input area into html

--- a/index.html
+++ b/index.html
@@ -6,5 +6,11 @@
 </head>
 <body>
     <script type="module" src="main.js"></script>
+    <div id="cube_area"></div>
+    <div id="input_area">
+        <input type="text" id="rotate_input"/>
+        <button id="rotate_button">Rotate</button>
+        <button id="reset_button">Reset</button>
+    </div>
 </body>
 </html>
