Apply rotations as you type

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <script type="module" src="main.js"></script>
     <div id="cube_area"></div>
     <div id="input_area">
-        <input type="text" id="rotate_input"/>
-        <button id="rotate_button">Rotate</button>
-        <button id="reset_button">Reset</button>
+        <textarea id="rotate_input" rows="4" cols="50" placeholder="Rotations"></textarea>
+        <br>
+        <button id="rotate_normalize_button" title="Normalize input">Normalize</button>
     </div>
 </body>
 </html>
