Add brute force solver

--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@
         <br>
         <button id="rotate_normalize_button" title="Normalize input">Normalize</button>
     </div>
+    <div id="solve_area">
+        <button id="solve_button">Solve</button>
+    </div>
 </body>
 </html>
