Remove the rotation input for now, add color selection and 'Don't Care' color (gray)

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <script type="module" src="main.js"></script>
     <div id="cube_area"></div>
     <div id="input_area">
-        <textarea id="rotate_input" rows="4" cols="50" placeholder="Rotations"></textarea>
-        <br>
-        <button id="rotate_normalize_button" title="Normalize input">Normalize</button>
+        <button id="reset_button" title="Reset to solved state">Reset</button>
+        <button id="clear_button" title="Clear all tiles (set to &quot;Don't Care&quot;)">Clear</button>
+        <div id="color_select_area"></div>
     </div>
     <div id="solve_area">
         <button id="solve_button">Solve</button>
