Add 'allowed rotations' section

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <div id="color_select_area"></div>
     </div>
     <div id="solve_area">
+        <div id="allowed_rotations_area"></div>
         <button id="solve_button">Solve</button>
     </div>
 </body>
