Add rotation buttons again

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div id="input_area">
         <button id="reset_button" title="Reset to solved state">Reset</button>
         <button id="clear_button" title="Clear all tiles (set to &quot;Don't Care&quot;)">Clear</button>
+        <div id="input_area"></div>
         <div id="color_select_area"></div>
     </div>
     <div id="solve_area">
