--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>Cube Solver</title>
     <link rel="icon" type="image/png" href="icon.png"/>
     <link rel="stylesheet" href="styles.css"/>
 </head>
