Add buttons to select all/no rotations

--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@
     </div>
     <hr>
     <div id="solve_area">
-        <div id="allowed_rotations_area"></div>
+        <div id="allowed_rotations_area">
+            <label for="allowed_rotations_area">Allowed Rotations:</label>
+            <button id="allow_all_button" title="Allow all possible rotations">Allow All</button>
+            <button id="allow_none_button" title="Allow no possible rotations">Allow None</button>
+        </div>
+        <br>
         <button id="solve_button">Solve</button>
     </div>
 </body>
