--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
             <button id="allow_all_button" title="Allow all possible rotations">Allow All</button>
             <button id="allow_none_button" title="Allow no possible rotations">Allow None</button>
         </div>
+        <label for="max_moves">Max Moves:</label>
+        <input type="number" id="max_moves" value="6" min="1" max="10"/>
         <br>
         <button id="solve_button">Solve</button>
     </div>
