--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <input type="number" id="max_moves" value="6" min="1" max="10"/>
         <br>
         <button id="solve_button">Solve</button>
+        <input type="text" id="solution_text" readonly/>
     </div>
 </body>
 </html>
