--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
         <input type="number" id="max_moves" value="6" min="1" max="6"/>
         <br>
         <button id="solve_button">Solve</button>
-        <input type="text" id="solution_text" readonly/>
+        <br>
+        <h4 id="solutions_header"></h4>
+        <ol id="solutions_list">
+        </ol>
     </div>
 </body>
 </html>
