--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
         <input type="number" id="max_moves" value="6" min="1" max="15"/>
         <br>
         <button id="solve_button">Solve</button>
+        <button id="stop_button" disabled="true">Stop</button>
+        <label id="timer_label"></label>
         <br>
         <h4 id="solutions_header"></h4>
         <ol id="solutions_list">
