--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <script type="module" src="main.js"></script>
+    <button id="theme_button" class="textOnly"></button>
+    <hr>
     <div id="cube_area"></div>
     <hr>
     <div id="input_area">
