--- a/index.html
+++ b/index.html
@@ -2,14 +2,12 @@
 <html>
 <head>
     <meta http-equiv="Cache-control" content="no-cache">
-    <script type="module" src="worker.js"></script>
 
     <title>Cube Solver</title>
     <link rel="icon" type="image/png" href="icon.png"/>
     <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
-    <script type="module" src="main.js"></script>
     <button id="theme_button" class="textOnly"></button>
     <hr>
     <div id="cube_area"></div>
@@ -46,5 +44,9 @@
         <ol id="solutions_list">
         </ol>
     </div>
+
+    <script src="modules/rubik.js"></script>
+    <script src="modules/solver.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
