Add to solutions list as solutions are found

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <label id="percent_label"></label>
         <label id="estimate_label"></label>
         <br>
-        <h4 id="solutions_header"></h4>
+        <h4 id="solutions_header">Solutions</h4>
         <ol id="solutions_list">
         </ol>
     </div>
