Signal in the UI when an error occurs

--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
         <h4 id="solutions_header">Solutions</h4>
         <ol id="solutions_list">
         </ol>
+        <br>
+        <label id="error_label"></label>
     </div>
 
     <script src="modules/rubik.js"></script>
