--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Cache-control" content="no-cache">
+    <meta http-equiv="Content-type" content="text/html; charset=UTF-8">
 
     <title>Cube Solver</title>
     <link rel="icon" type="image/png" href="icon.png"/>
