--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
         </div>
         <label for="max_moves">Max Moves:</label>
         <input type="number" id="max_moves" value="6" min="1" max="15"/>
+        <input type="checkbox" id="center_orientation">
+        <label for="center_orientation">Check center orientation</label>
         <br>
         <button id="solve_button">Solve</button>
         <button id="stop_button" disabled="true">Stop</button>
