Add buttons to set the center orientation

--- a/index.html
+++ b/index.html
@@ -16,9 +16,20 @@
     <div id="input_area">
         <button id="reset_button" title="Reset to solved state">Reset</button>
         <button id="clear_button" title="Clear all tiles (set to &quot;Don't Care&quot;)">Clear</button>
-        <div id="color_select_area">
-            <label>Color select</label>
-        </div>
+        <table>
+            <tr>
+                <td>
+                    <div id="color_select_area">
+                        <label>Color select</label>
+                    </div>
+                </td>
+                <td>
+                    <div id="orientation_select_area">
+                        <label>Orientation select</label>
+                    </div>
+                </td>
+            <tr>
+        </table>
         <label for="input_rotations_text">Apply Rotations</label>
         <br>
         <input type="text" id="input_rotations_text" placeholder="e.g. L F' R2 ..."/>
